testsuite/escript/errors/errors006-for-loop-iterator-same-name-as-function.err1
FOR iterator must be an identifier, got Func(0,0): len
